--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,24 @@
 # Node.js dependencies
 node_modules/
+
 # Build outputs
 dist/
 build/
+
 # System files
 .DS_Store
 Thumbs.db
+
 # IDE files
 .idea/
 .vscode/
+
 # Logs and temp files
 *.log
 *.tmp
 *.swp
 *.swo
+
 # Compiled code
 *.class
 *.o
@@ -21,11 +26,21 @@ Thumbs.db
 *.so
 *.dll
 *.exe
+
 # Configuration files
 *.local
+
 # Sensitive information
 *.pem
 *.crt
+
 # Environment files
 .env
 .env.*
+
+# Ignore all .out files
+*.out
+
+# Ignore internal dockerFiles
+*].yml
+*].Dockerfile
